Fix content spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,8 @@ body {
 .flex {
     display: flex;
     padding: 1.1rem;
+    justify-content: space-between;
+    height: 100vh;
 }
 
 .flex-col {
